--- a/sample1.html
+++ b/sample1.html
@@ -6,8 +6,8 @@ HOC CHU DONG
 </head>
 <body>
 Xin chao
-Day la trang web mau
-Trang nay dung de test 
+<p> Day la trang web mau </p>
+<p> Trang nay dung de test </p>
 </body>
 
 </html>
