--- a/sample1.html
+++ b/sample1.html
@@ -1,13 +1,18 @@
 <html>
-<head>
-<title>
-HOC CHU DONG
-</title>
-</head>
-<body>
-Xin chao
-<p> Day la trang web mau </p>
-<p> Trang nay dung de test </p>
-</body>
-
+ <head>
+  <title>
+   HOC CHU DONG
+  </title>
+ </head>
+ <body>
+   Xin chao
+   <p> 
+     Day la trang web mau
+     <a href="https://hocchudong.com"> HOCCHUDONG.COM </a>
+   </p>
+   <p> 
+     Trang nay dung de test 
+     <a href="https://hocchudong.com/test.html"> HOCCHUDONG.COM </a>
+   </p>
+ </body>
 </html>
